--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.4",
   "author": "Rich Tabor",
   "author_uri": "https://wpblockgallery.com",
-  "description": "Block Gallery is a suite of beautiful gallery blocks for the WordPress Gutenberg block editor.",
+  "description": "The most advanced suite of gallery blocks for the Gutenberg block editor. Create stunning <strong>masonry</strong>, <strong>carousel</strong> and <strong>stacked</strong> galleries in seconds, with the brilliantly intuitive interface. Block Gallery is absolutely the best collection of native editor gallery blocks in the world.",
   "requires": "4.9",
   "tested_up_to": "5.0.0",
   "license": "GPL-3.0",
