--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "block-gallery",
   "title": "Block Gallery",
-  "version": "1.1.6",
-  "author": "Rich Tabor",
-  "author_uri": "https://wpblockgallery.com",
   "description": "The most advanced suite of gallery blocks for the Gutenberg block editor. Create stunning <strong>masonry</strong>, <strong>carousel</strong> and <strong>stacked</strong> galleries in seconds, with the brilliantly intuitive interface. Block Gallery is absolutely the best collection of native editor gallery blocks in the world.",
-  "requires": "4.9",
+  "version": "1.1.6",
   "tested_up_to": "5.2",
-  "license": "GPL-3.0",
-  "copyright": "Copyright (c) 2019, Inventionn LLC",
-  "downloadid": "",
+  "author": "GoDaddy",
+  "author_uri": "https://www.godaddy.com",
+  "requires": "5.0",
+  "license": "GPL-2.0",
   "scripts": {
     "start": "gulp | cgb-scripts start",
     "build": "cgb-scripts build | babel src",
